# ARASTester

./: .eslintrc.cjs  .eslintrc.json  .gitignore  README.md  dev-runner.js  errors.txt  index.html  jsconfig.json  lint_errors.txt  lint_errors_final.txt  lint_errors_remaining.txt  lint_output.txt  lint_output_2.txt  main.js  monolithic_files_report.json  package-lock.json  package.json  preload.js  preload.ts  tailwind.config.js  tsc_errors_3c.txt  tsc_output.txt  tsc_output_3a.txt  tsc_output_3b.txt  tsconfig.eslint.json  tsconfig.json  tsconfig.preload.json  vite.config.js
.Jules/: palette.md
.pi-lens/: index.json
.pi-lens/cache/: jscpd.json  jscpd.meta.json  knip.meta.json  session-start-guidance.meta.json  todo-baseline.meta.json
Knowledge/: ARASTester-Overview.md
backend/: verify_integration.ps1
backend/ArasBackend.Application/: ArasBackend.Application.csproj  DependencyInjection.cs
backend/ArasBackend.Infrastructure/: ArasBackend.Infrastructure.csproj  (+1 more)
docs/: 01_SYSTEM_OVERVIEW.md  02_ARCHITECTURE.md  03_DATA_AND_CONTROL_FLOW.md  04_FRONTEND.md  05_BACKEND.md  06_SECURITY_AND_FAILURES.md  07_NON_GOALS_AND_GAPS.md  08_ENFORCEMENT_DEBT.md  08_TAURI_MIGRATION_REPORT.md  API_REFERENCE.md  README.md
documentation/: 01_SYSTEM_OVERVIEW.md  02_ARCHITECTURE.md  04_FRONTEND.md  05_BACKEND.md  06_SECURITY_AND_FAILURES.md  07_NON_GOALS_AND_GAPS.md  API_REFERENCE.md
renderer/: App.jsx  globals.css  main.jsx  vite-env.d.ts
scripts/: assert-tsconfig.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
tests/: security.test.js
(+155 files in other folders)
